--- a/styles.css
+++ b/styles.css
@@ -113,10 +113,23 @@ body {
 .sun {
     width: 80px;
     height: 80px;
-    background-color: #FDB813;
+    
     top: calc(50% - 40px);
     left: calc(50% - 40px);
+    border-radius: 50%;
     animation: rotate 20s linear infinite;
+}
+  
+.sun:before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
+    background-color: #FDB813;
+    border-radius: 50%;
 }
 
 .earth {
@@ -147,11 +160,11 @@ body {
 }
 
 .spaceship {
-    width: 50px;
+    width: 30px;
     height: 20px;
-    background-color: #FFF;
+    background-color: #ff00f7;
     position: absolute;
-    top: calc(50% - 10px);
+    top: calc(50% - 40px);
     left: calc(50% + 90px);
     transform-origin: bottom center;
     animation: fly-around 8s linear infinite;
@@ -163,8 +176,8 @@ body {
     left: -20px;
     width: 40px;
     height: 40px;
-    background-image: url('shootingstar.png'); /* Replace with your own image */
-    background-color: #000;
+    /* background-image: url('shootingstar.png');  */
+    /* background-color: #000; */
     animation: shooting-star 5s linear infinite;
 }
 
