--- a/styles.css
+++ b/styles.css
@@ -153,6 +153,7 @@ body {
     animation: orbit-earth 10s linear infinite;
     overflow: hidden;
     border-radius: 50%;
+    
 }
 .earth:before {
     content: "";
@@ -201,28 +202,69 @@ body {
     background-image: radial-gradient(circle, #FF5233 20%, #9C2815 80%);
     box-shadow: 0 0 5px 1px #FF5233;
     animation: orbit-mars 15s linear infinite;
+    border-radius: 50%;
 }
-
+.mars:before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 85%;
+    height: 85%;
+    background: radial-gradient(#FF5233, transparent);
+    border-radius: 50%;
+    opacity: 0.5;
+    background-color: #F8F8F8;
+    z-index: 1;
+}
+.mars .crater {
+    position: absolute;
+    background-color: #BBB;
+    border-radius: 50%;
+}
+.mars .crater:nth-child(1) {
+    width: 4px;
+    height: 4px;
+    top: 10%;
+    left: 35%;
+}
+.mars .crater:nth-child(2) {
+    width: 3px;
+    height: 3px;
+    top: 20%;
+    left: 60%;
+}
+.mars .crater:nth-child(3) {
+    width: 2px;
+    height: 2px;
+    top: 30%;
+    left: 80%;
+}
+    
 .moon {
     width: 12px;
     height: 12px;
     top: calc(50% - 6px);
-    left: calc(50% + 30px);
+    left: calc(50% + 40px);
     background-color: #DDD;
     border-radius: 50%;
-    animation: orbit-moon 5s linear infinite;
     overflow: hidden;
+    animation: orbit-moon 5s linear infinite;
+    position: relative;
+    z-index: 1;
 }
 .moon:before {
     content: "";
-    position: absolute;
-    top: calc(50% - 6px);;
-    left: calc(50% + 30px);
-    transform: translateX(-50%);
+    
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     width: 100%;
     height: 100%;
-    background-color: #FFF;
+    background-color: #DDD;
     border-radius: 50%;
+    
 }
     
 .moon .crater {
@@ -245,7 +287,6 @@ body {
     left: 65%;
 }
 
-
 .spaceship {
     width: 10px;
     height: 20px;
@@ -259,7 +300,6 @@ body {
     overflow: hidden;
     box-shadow: 0 0 10px rgba(255, 0, 247, 0.8);
 }
-  
 .spaceship:before {
     content: "";
     position: absolute;
@@ -269,7 +309,6 @@ body {
     height: 20px;
     background-color: #888;
 }
-
 
 .shooting-star {
     position: absolute;
