--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,10 @@
 /* Global Styles */
+canvas {
+    display: block;
+    width: 100%;
+    height: 100%;
+    
+}
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -716,5 +722,6 @@ body {
     transform: translateX(140px);
   }
 }
+
 
   
